--- a/views/vwUser/courses.hbs
+++ b/views/vwUser/courses.hbs
@@ -22,7 +22,7 @@
                 <p class="course-card-instructor">{{instructor}}</p>
                 <span class="rating">{{rating}}</span>
                 {{#each star}}
-                <span class="fa fa-star{{#if starHalf}}-half-o star-checked{{/if}} {{#if star}}star-checked{{/if}}"></span>
+                  <span class="fa {{#if starHalf}}fa-star-half-o star-checked{{/if}} {{#if star}}fa-star star-checked{{else}}fa-star-o star-checked{{/if}}"></span>
                 {{/each}}
                 <span>&nbsp;({{format_number rating_num}})</span><br>
                 {{#if hasPromotion}}
