--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -18,18 +18,18 @@
   <div>
     <div class="card">
     <h4 class="card-header">
-        Add course
+        Add course <i class="fa fa-file-text" aria-hidden="true"></i>
     </h4>
     {{#if this.empty}}
         <div class="card-body">
             No data!
         </div>
     {{else}}
-        <form style="margin-top: 2em; margin-left: 1em; margin-right: 1em;">
+  <form style="margin-top: 2em; margin-left: 1em; margin-right: 1em;" method="POST">
   <div class="form-row">
     <div class="form-group col-md-6">
-      <label for="inputCourseName">Course Name</label>
-      <input type="email" class="form-control" id="inputCourseName" placeholder="Course name">
+      <label for="inputCourseName">Course Name </label>
+      <input type="text" class="form-control" id="inputCourseName" placeholder="Course name">
     </div>
     <div class="form-group col-md-6">
       <label for="inputLN">Lecturer Name</label>
@@ -97,8 +97,9 @@
       </label>
     </div>
   </div>
-  <div class="form-group">
-  <button type="submit" class="btn btn-primary">Finnish</button>
+  <div class="form-group d-flex justify-content-between">
+  <button type="submit" class="btn btn-primary">Add Course</button>
+  <a class="btn btn-primary" href="/user/editCourse" role="button" value="Add">Back</a>
   </div>
 </form>
     {{/if}}
