--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -1,134 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--Phan Huy create courses view-->
+<div class="d-lg-flex justify-content-lg-center">
+    <div class="contents order-2 order-md-1">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-10 py-5 text-white">
+                    <h2 class="font-weight-bold font-italic">Create new course</h2>
+                    <div class="bg-secondary rounded" >
+                        <blockquote class="mb-0 font-weight-bold" style="font: 1.4rem/1.8rem Georgia, serif; ">
+                            <q> Teachers have three loves: love of learning, love of learners, and the love of bringing the first two loves together. </q>
+                        </blockquote>
+                    </div>
+                    <div class="align-items-center text-center">
+                        <p class="font-italic"><strong>Scott Hayden</strong></p>
+                    </div>
+                    <form action="/teacher/addCourse" method="post" class="mt-3" enctype="multipart/form-data">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="courseName">Course Name</label>
+                                    <input type="text" name="courseName" class="form-control" placeholder="Full Web Development Course 2023" id="courseName" required>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="title">Instructor</label>
+                                    <input type="text" name="instructor" class="form-control" value={{this.teacher.teacherName}} placeholder="{{this.teacher.teacherName}}" id="instructor" readonly>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="selectCatID">Categories</label>
+                                    <select class="form-control" id="selectCatID" name="catID">
+                                        <option class="form-control input-group" value="1" name="catID">Categories 1</option>
+                                        <option class="form-control" value="2" >Categories 2</option>
+                                        <option class="form-control" value="3" >Categories 3</option>
+                                        <option class="form-control" value="4" >Categories 4</option>
+                                        <option class="form-control" value="5" >Categories 5</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="prices">Price</label>
+                                    <select class="form-control" id="prices" name="price">
+                                        <option value="199000" name="catID">199,000VND</option>
+                                        <option value="299000" name="catID">299,000VND</option>
+                                        <option value="499000" name="catID">499,000VND</option>
+                                        <option value="599000" name="catID">599,000VND</option>
+                                        <option value="899000" name="catID">899,000VND</option>
+                                        <option value="999000" name="catID">999,000VND</option>
+                                        <option value="1099000" name="catID">1,099,000VND</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="lec_num">Number lectures</label>
+                                    <input name="lec_num" type="number" min="1" step="1"/>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="teacherNumber">Instructor ID:</label>
+                                    <input name="teacherNumber" type="text" placeholder="{{this.teacher.teacherID}}" value="{{this.teacher.teacherID}}" readonly/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group first">
+                                    <label for = "Files">Course Image</label>
+                                    <div class="file-upload">
+                                        <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-        <title>TinyMCE WYSIWYG Bootstrap</title>
-        
-        <!-- TinyMCE CDN -->
-        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-        
-    </head>
-<body>
-  <div>
-    <div class="card">
-    <h4 class="card-header">
-        Add course <i class="fa fa-file-text" aria-hidden="true"></i>
-    </h4>
-    {{#if this.empty}}
-        <div class="card-body">
-            No data!
+                                        <div class="image-upload-wrap">
+                                            <input class="file-upload-input" name="Files" type='file' onchange="readURL(this);" accept="image/*" />
+                                            <div class="drag-text">
+                                                <h3>Drag and drop a file or select add Image</h3>
+                                            </div>
+                                        </div>
+                                        <div class="file-upload-content">
+                                            <img class="file-upload-image" src="#" alt="your image" />
+                                            <div class="image-title-wrap">
+                                                <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <label for="email">Description</label>
+                                    <textarea name="description" required>
+                    </textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <button type="submit" class="btn btn-outline-light">
+                                    <i class="fa fa-backward" aria-hidden="true"></i>
+                                    Cancel
+                                </button>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn btn-primary ">
+                                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                                    Add Course
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-    {{else}}
-  <form style="margin-top: 2em; margin-left: 1em; margin-right: 1em;" method="POST">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCourseName">Course Name </label>
-      <input type="text" class="form-control" id="inputCourseName" placeholder="Course name">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputLN">Lecturer Name</label>
-    <input type="text" class="form-control" id="inputLN" placeholder="Lecturer name">
-    </div>
-  </div>
-  <div class="form-group">
-      <label for="inputCourseIMG">Image</label>
-    <input type="text" class="form-control" id="inputCourseIMG" placeholder="img url here">
-    </div>
-  <div class="form-group">
-    <label for="inputCourseDes">Description</label>
-  <div id="editor">
-  <p><br></p>
-  <p><br></p>
-  <p><br></p>
-  </div>
-  </div>
-  <!-- Include the Quill library -->
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-
-<!-- Initialize Quill editor -->
-<script>
-  var quill = new Quill('#editor', {
-    theme: 'snow'
-  });
-</script>
-  <div class="form-group">
-    <label for="inputCourseSDes">Short Description</label>
-    <textarea type="text" class="form-control" id="inputCourseSDes" placeholder=""></textarea>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-3">
-      <label for="inputCoursePrice">Price per Student</label>
-      <input type="text" class="form-control" id="inputCoursePrice" placeholder="vnd">
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputCourseDis">Discount</label>
-      <input type="text" class="form-control" id="inputCourseDis" placeholder="">
-    </div>
-    <div class="form-group col-md-1">
-      <label for="inputStuNum">Max student(s)</label>
-      <input type="text" class="form-control" id="inputStuNum" placeholder="">
-    </div>
-    <div class="form-group col-md-3">
-      <label for="inputCourseField">Field</label>
-      <select id="inputCourseField" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-    <div class="form-group col-md-3 ">
-      <label for="inputCourseCat">Category</label>
-      <select id="inputCourseCat" class="form-control">
-        <option selected>Choose...</option>
-        <option>...</option>
-      </select>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
-      <label class="form-check-label" for="gridCheck">
-        Check me out
-      </label>
-    </div>
-  </div>
-  <div class="form-group d-flex justify-content-between">
-  <button type="submit" class="btn btn-primary">Add Course</button>
-  <a class="btn btn-primary" href="/user/editCourse" role="button" value="Add">Back</a>
-  </div>
-</form>
-    {{/if}}
-
-<!--
-    <nav aria-label="...">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <span class="page-link">Previous</span>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item active" aria-current="page">
-                <span class="page-link">2</span>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        </ul>
-    </nav>
-    -->
-    <div class="card-footer text-muted">
-        foooooooooooooooooooter
     </div>
 </div>
-</body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/umd/popper.min.js" integrity="sha512-BmM0/BQlqh02wuK5Gz9yrbe7VyIVwOzD1o40yi1IsTjriX/NGF37NyXHfmFzIlMmoSIBXgqDiG1VNU6kB5dBbA==" crossorigin="anonymous"></script>
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</html>
