Update API upload image, stored image id to DB, update createCourse.css

--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -57,7 +57,7 @@
                                         <div class="col-lg-4 mb-4">
                                             <a href="/course/{{courseID}}_{{courseName}}">
                                                 <div class="card" >
-                                                    <img src="https://img-c.udemycdn.com/course/480x270/2776760_f176_10.jpg" alt="" class="card-img-top">
+                                                        <img src="https://drive.google.com/uc?export=view&id={{image}}" alt="" class="card-img-top">
                                                     <div class="card-body">
                                                         <h5 class="card-title">{{courseName}}</h5>
                                                         <p class="card-text">{{description}}</p>
