--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -24,7 +24,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="title">Instructor</label>
-                                    <input type="text" name="instructor" class="form-control" value={{this.teacher.teacherName}} placeholder="{{this.teacher.teacherName}}" id="instructor" readonly>
+                                    <input type="text" name="instructor" class="form-control" value="{{this.teacher.teacherName}}" placeholder="{{this.teacher.teacherName}}" id="instructor" readonly>
                                 </div>
                             </div>
                             <div class="col-md-6">
