--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -6,7 +6,7 @@
                 <div class="col-md-10 py-5 text-white">
                     <h2 class="font-weight-bold font-italic">Create new course</h2>
                     <div class="bg-secondary rounded" >
-                        <blockquote class="mb-0 font-weight-bold" style="font: 1.4rem/1.8rem Georgia, serif; ">
+                        <blockquote class="mb-0 font-weight-bold d-flex" style="font: 1.4rem/1.8rem Georgia, serif; text-align: center;">
                             <q> Teachers have three loves: love of learning, love of learners, and the love of bringing the first two loves together. </q>
                         </blockquote>
                     </div>
@@ -21,13 +21,25 @@
                                     <input type="text" name="courseName" class="form-control" placeholder="Full Web Development Course 2023" id="courseName" required>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <label for="title">Instructor</label>
                                     <input type="text" name="instructor" class="form-control" value="{{this.teacher.teacherName}}" placeholder="{{this.teacher.teacherName}}" id="instructor" readonly>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label for="title">Title</label>
+                                    <input type="text" name="title" class="form-control" placeholder="" id="title" required>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="form-group">
+                                    <label for="courseID">Course ID</label>
+                                    <input type="text" name="courseID" class="form-control" placeholder="e.g. 1,2,3,..." id="courseID" required>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <label for="selectCatID">Categories</label>
                                     <select class="form-control" id="selectCatID" name="catID">
@@ -39,7 +51,8 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            
+                            <div class="col-md-3">
                                 <div class="form-group">
                                     <label for="prices">Price</label>
                                     <select class="form-control" id="prices" name="price">
@@ -53,18 +66,41 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-3">
                                 <div class="form-group">
-                                    <label for="lec_num">Number lectures</label>
+                                    <label for="promotion">Promotion</label>
+                                    <input type="text" name="promotion" class="form-control" placeholder="e.g. 100000VND..." id="promotion" required>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="lec_num">Number of lectures</label>
+                                <div class="form-group">
+                                    
                                     <input name="lec_num" type="number" min="1" step="1"/>
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-3">
+                                <label for="student_num">Number of students</label>
                                 <div class="form-group">
-                                    <label for="teacherNumber">Instructor ID:</label>
+                                    
+                                    <input name="student_num" type="number" min="1" step="1"/>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="teacherNumber">Instructor ID:</label>
+                                <div class="form-group">
+                                    
                                     <input name="teacherNumber" type="text" placeholder="{{this.teacher.teacherID}}" value="{{this.teacher.teacherID}}" readonly/>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <label for="lec_num">Rating</label>
+                                <div class="form-group">
+                                    
+                                    <input name="rating_num" type="number" min="1" step="1"/>
+                                </div>
+                            </div>
+                            
                         </div>
                         <div class="row">
                             <div class="col-md-12">
@@ -88,10 +124,17 @@
                                     </div>
                                     <label for="email">Description</label>
                                     <textarea name="description" required>
-                    </textarea>
+                                    </textarea>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-1" style="visibility:hidden">
+                                <label for="hidden">Hidden</label>
+                                <div class="form-group">
+                                    
+                                    <input name="hidden" type="text" placeholder="1" value="1" readonly/>
+                                </div>
+                            </div>
                         <div class="d-flex justify-content-between">
                             <div>
                                 <button type="submit" class="btn btn-outline-light">
