--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-.search-container {
+.search-container{
     background: #fff;
     height: 30px;
     border-radius: 30px;
@@ -8,23 +8,23 @@
     align-items: center;
     cursor: pointer;
     transition: 0.8s;
-    box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, .3),
-    -4px -4px 6px 0 rgba(116, 125, 136, .2),
-    inset -4px -4px 6px 0 rgba(255, 255, 255, .2),
+    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.3),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
     inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
 }
 
-.search-container .search-input {
+.search-container .search-input{
     width: 400px;
     background: transparent;
     border: none;
-    outline: none;
+    outline:none;
     font-weight: 500;
     font-size: 16px;
     transition: 0.8s;
 }
 
-.search-container .search-btn .fa {
+.search-container .search-btn .fa{
     color: #5cbdbb;
 }
 
@@ -32,7 +32,7 @@
     position: relative;
 }
 
-.dropdown-submenu > .dropdown-menu {
+.dropdown-submenu>.dropdown-menu {
     top: 0;
     left: 101%;
     margin-top: -8px;
@@ -42,16 +42,16 @@
     border-radius: 6px 6px 6px 6px; */
 }
 
-.dropdown-submenu:hover > .dropdown-menu {
+.dropdown-submenu:hover>.dropdown-menu {
     display: block;
 }
 
-.dropdown:hover > .dropdown-menu {
+.dropdown:hover>.dropdown-menu {
     display: block;
     margin-top: -10px;
 }
 
-.dropdown-submenu > a:after {
+.dropdown-submenu>a:after {
     display: block;
     content: " ";
     float: right;
@@ -60,12 +60,12 @@
     border-color: transparent;
     border-style: solid;
     border-width: 5px 0 5px 5px;
-    border-left-color: rgb(12, 1, 1);
+    border-left-color: rgb(12, 1, 1); 
     margin-top: 5px;
     margin-right: -10px;
 }
 
-.dropdown-submenu:hover > a:after {
+.dropdown-submenu:hover>a:after {
     border-left-color: rgb(4, 0, 255);
 }
 
@@ -73,7 +73,7 @@
     float: none;
 }
 
-.dropdown-submenu.pull-left > .dropdown-menu {
+.dropdown-submenu.pull-left>.dropdown-menu {
     left: -100%;
     margin-left: 10px;
     /* -webkit-border-radius: 6px 0 6px 6px;
@@ -85,34 +85,33 @@
     color: rgb(4, 0, 255);
     background-color: white;
 }
-
-body {
+body{
     height: 100%;
 }
 
 .aPath, .aPath:hover {
     font-weight: bold;
     text-decoration: none;
-    color: black;
+    color:black;
 }
 
 .course-card {
     background-color: #fff;
-    border: none;
-    border-radius: 10px;
+	border:none;
+	border-radius: 10px;
     height: 350px;
-    width: 300px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	width: 300px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 10px;
     margin-bottom: 10px;
 }
 
 .course-card:hover {
     transition-duration: 500ms;
-    transform: scale(1.01, 1.01)
+    transform: scale(1.01,1.01)
 }
 
-.course-card:hover > .course-card-img {
+.course-card:hover>.course-card-img {
     opacity: 0.8;
 }
 
@@ -136,7 +135,7 @@ body {
 }
 
 .course-card-instructor {
-    color: rgb(160, 164, 147);
+    color:rgb(160, 164, 147);
     margin-bottom: -1px;
 }
 
@@ -145,7 +144,7 @@ body {
 }
 
 .fa-star {
-
+    
 }
 
 .rating {
@@ -177,7 +176,6 @@ body {
     color: rgb(204, 35, 204);
     text-decoration: underline;
 }
-
 .course-instructor {
     color: rgb(204, 35, 204);
     text-decoration: underline;
@@ -207,10 +205,10 @@ body {
 
 .price-box {
     background-color: orange;
-    border: none;
-    border-radius: 10px;
-    width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	border:none;
+	border-radius: 10px;
+	width: 200px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 10px;
     margin: 0 auto;
 }
@@ -306,11 +304,41 @@ body {
     font-size: 18px;
     font-weight: bold;
 }
+/*.headerUserRating {*/
+/*    background: white;*/
+/*    width: 100%;*/
+/*    font-size: 20px;*/
+/*    color: black;*/
+/*    font-weight: 500;*/
+/*    margin: 5px 0 20px 0;*/
+/*    text-align: center;*/
+/*    transition: all 0.2s ease;*/
+/*}*/
 
-.checked {
+/*.popup {*/
+/*    z-index: 1000;*/
+/*    width: 400px;*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%) scale(0.1);*/
+/*    text-align: center;*/
+/*    padding: 0 30px 30px;*/
+/*    visibility: visible;*/
+/*    transition: transform 0.4s , top 0.4s;*/
+/*}*/
+
+/*.open-popup {*/
+/*    visibility: visible;*/
+/*    top: 50%;*/
+/*    transform: translate(-50%, -50%) scale(1);*/
+/*}*/
+/*.checked{*/
+/*    color: orange;*/
+/*}*/
+.checked{
     color: orange;
 }
-
 .userRating {
     background: #d9a7c7; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7); /* Chrome 10-25, Safari 5.1-6 */
@@ -386,7 +414,7 @@ input:checked ~ label {
     transform: translate(-50%, -50%) scale(0.1);
     text-align: center;
     padding: 0 30px 30px;
-    visibility: visible;
+    visibility: hidden;
     transition: transform 0.4s , top 0.4s;
 }
 
