--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,10 +143,6 @@ body{
     color: orange;
 }
 
-.fa-star {
-    
-}
-
 .rating {
     font-weight: bold;
     color: orange;
@@ -182,41 +178,42 @@ body{
 }
 
 .course-img {
-    width: 40%;
-    float: left;
-    margin-right: 10px;
+    width: 30%;
+    margin-top: 15px;
+    vertical-align: top;
     border: 1px solid;
 }
 
 .course-title {
-    float: right;
-    width: 55%;
+    margin-top: 10px;
+    margin-left: 15px;
+    display: inline-block;
+    width: 65%;
+    padding: 5px;
 }
 
 .course-title-info {
     width: 50%;
-    float: left;
 }
 
 .course-title-price {
-    width: 50%;
-    float: right;
 }
 
 .price-box {
     background-color: orange;
 	border:none;
 	border-radius: 10px;
-	width: 200px;
+	width: 280px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 10px;
-    margin: 0 auto;
+    padding: 20px 0;
+    margin-right: 10px;
 }
 
 .buy-now {
-    margin: 20px auto 10px;
+    border: 0;
+    border-radius: 10px;
     width: 200px;
-    padding: 10px;
+    padding: 15px;
     background-color: white;
 }
 
@@ -224,10 +221,24 @@ body{
     opacity: 0.8;
 }
 
+.course-add-to-wishlist {
+    border-radius: 10px;
+    border: 0;
+    padding: 19px 25px;
+    margin-left: 10px;
+    background-color: white;
+}
+
+.course-add-to-wishlist:hover {
+    opacity: 0.8;
+}
+
+.added-to-wishlist {
+    color: black;
+}
+
 .course-title-price-card {
-    position: absolute;
-    right: 100px;
-    bottom: 5px;
+    margin: 15px 0 15px 72.5%;
 }
 
 .main-des {
